--- a/css/syile.css
+++ b/css/syile.css
@@ -11,3 +11,78 @@ body{
     font-size: 62.5%;
 }
 
+/* common */
+.container{
+    width: 70%;
+    margin: 0 auto;
+}
+/* header */
+header{
+    min-height: 400px;
+    background-color: blue;   
+}
+
+nav{
+    padding: 1em;
+    /* Debug */
+    background-color: aqua;
+    
+
+}
+
+.option-container{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    min-height: 40px;
+    background-color: green;
+}
+
+.nav-option-logo{
+    text-align: left;
+    padding: .5em;
+
+    /* debug */
+    border: 1px dotted black;
+    max-width: 100px;
+    padding: .5em;
+}
+
+.nav-option-link ul{
+    display: flex;
+    list-style-type: none;
+
+}
+
+.nav-option-link ul li{
+    padding: .5em 1.5em;
+}
+
+/* .nav-option-sign */
+
+/* nav */
+
+/* jumbotron */
+
+.jumbotron-container{
+    display: flex;
+    justify-content: center;
+
+    height: 100%;
+    align-items: center;
+}
+
+.jumbotron{
+
+    /* debug */
+    background-color: purple;
+    width: 40%;
+    min-height: 200px;
+}
+
+
+
+
+
