--- a/css/syile.css
+++ b/css/syile.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: 'Whitney SSm A', 'Whitney SSm B', Arial;
+    font-family: 'Whitney', Arial;
     font-weight: 400;
     font-style: normal;
     font-size: 62.5%;
@@ -23,25 +23,22 @@ body{
 /* header */
 header{
     min-height: 400px;
-    background-color: blue;   
+    background-color: blue;
+    background-image: url(../img/jumbo.png);
+    background-size: contain;
 }
 
 nav{
     padding: 1em;
-    /* Debug */
-    background-color: aqua;
-    
-
 }
 
 .option-container{
     width: 90%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     min-height: 40px;
-    background-color: green;
 }
 
 .nav-option-logo{
@@ -54,17 +51,27 @@ nav{
     padding: .5em;
 }
 
+.nav-option-link{
+    /* debug */
+    border: 1px dotted black;
+    
+}
+
 .nav-option-link ul{
     display: flex;
     list-style-type: none;
-
 }
 
 .nav-option-link ul li{
     padding: .5em 1.5em;
 }
 
-/* .nav-option-sign */
+.nav-option-sign{
+    text-align: right;
+    padding: .5em;
+    /* debug */
+    border: 1px dotted black;
+}
 
 /* nav */
 
@@ -73,8 +80,7 @@ nav{
 .jumbotron-container{
     display: flex;
     justify-content: center;
-
-    height: 100%;
+    min-height: 350px;
     align-items: center;
 }
 
@@ -82,8 +88,8 @@ nav{
 
     /* debug */
     background-color: purple;
-    width: 40%;
     min-height: 200px;
+    width: 50%;
 }
 
 /* main */
@@ -91,19 +97,25 @@ nav{
     min-height: 400px;
     display: flex ;
     align-items: center;
+    justify-content: center;
     padding: 4em;
-    
+}
+
+.container-main{
+    padding: 1rem;
+    display: flex;
+    gap: 1em;
 }
 
 .photo{
-    min-height: 200px;
-    flex-grow: 3;
+    min-height: 300px;
+    flex-grow: 2;
     /* debug */
     background-color: red;
 }
 
 .text{
-    min-height: 200px;
+    min-height: 300px;
     flex-grow: 1;
     /* debug */
     background-color: lightcoral
@@ -116,7 +128,7 @@ nav{
 .big-description{
     min-height: 300px;
         /* debug */
-    background-color: magenta;
+    background-color: #228B22;
 }
 
 /* footer */
@@ -129,12 +141,14 @@ footer{
     height: 500px;
 }
 
+/*  top footer */
+
 .top-footer{
     min-height: 200px;
     display:flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 2em;
+    padding: 1em;
     border-bottom: 1px solid white;
 }
 
@@ -156,6 +170,34 @@ footer{
 .links ul{
     list-style-type: none;
 }
+
+/*  bottom footer */
+
+.bottom-footer{
+    min-height: 50px;
+    align-items: center;
+    margin-top:2em;
+    /* debug */
+    background-color: #7FFFD4;
+}
+
+.bottom-logo{
+    width: 10%;
+    padding: 1em;
+    /* debug */
+    background-color: #FFB6C1;
+    border: 1px dotted black;
+}
+
+.bottom-sign{
+    width: 10%;
+    padding: 1em;
+    /* debug */
+    background-color: #FFB6C1;
+    border: 1px dotted black;
+}
+
+
 
 
 
