--- a/css/syile.css
+++ b/css/syile.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Whitney', Arial;
     font-weight: 400;
     font-style: normal;
-    font-size: 62.5%;
+    font-size: 100%;
 }
 
 /* common */
@@ -17,15 +17,24 @@ body{
     margin: 0 auto;
 }
 
+.mgb{
+    margin-bottom: 1em;
+}
+
+.mgt{
+    margin-top: 1em;
+}
+/* debug */
 .bg_gray{
     background-color: lightgray;
 }
 /* header */
 header{
-    min-height: 400px;
+    min-height: 100px;
     background-color: blue;
     background-image: url(../img/jumbo.png);
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
 }
 
 nav{
@@ -41,23 +50,12 @@ nav{
     min-height: 40px;
 }
 
-.nav-option-logo{
-    text-align: left;
-    padding: .5em;
-
-    /* debug */
-    border: 1px dotted black;
+.nav-option-logo img {
     max-width: 100px;
-    padding: .5em;
-}
-
-.nav-option-link{
-    /* debug */
-    border: 1px dotted black;
-    
 }
 
 .nav-option-link ul{
+    color: #DBE0F9;
     display: flex;
     list-style-type: none;
 }
@@ -66,11 +64,11 @@ nav{
     padding: .5em 1.5em;
 }
 
-.nav-option-sign{
-    text-align: right;
-    padding: .5em;
-    /* debug */
-    border: 1px dotted black;
+.nav-option-sign a{
+    text-decoration: none;
+    background-color: #ffffff;
+    padding: .5em 2em;
+    border-radius: 16px;
 }
 
 /* nav */
@@ -85,12 +83,32 @@ nav{
 }
 
 .jumbotron{
-
-    /* debug */
-    background-color: purple;
-    min-height: 200px;
-    width: 50%;
+    color: white;
+    text-align: center;   /*sistemare font*/
+    width: 40%;
 }
+
+.jumbotron p{
+    padding-bottom:2em;
+}
+
+.button-header{
+    color: black;
+    text-decoration: none;
+    background-color: #ffffff;
+    margin: 3em 1em;
+    padding: .5em 2em;
+    border-radius: 16px;
+}
+
+.button-header-2{
+    color: white;
+    background-color: black;
+}
+
+
+
+
 
 /* main */
 .section-main{
